k8s/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: product-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: ui

  template:
    metadata:
      labels:
        app: ui

    spec:
      containers:
        - name: ui

          image: ACR_LOGIN_SERVER/aks-product-ui:IMAGE_TAG

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"

            limits:
              cpu: "300m"
              memory: "256Mi"
