k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: product-app

spec:
  type: ClusterIP

  selector:
    app: api

  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
