k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: product-app

  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"

spec:
  type: LoadBalancer

  selector:
    app: ui

  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
