k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  namespace: product-app

  annotations:
    kubernetes.io/ingress.class: azure/application-gateway

spec:
  rules:
    - http:
        paths:

          - path: /api
            pathType: Prefix

            backend:
              service:
                name: api-service
                port:
                  number: 80

          - path: /
            pathType: Prefix

            backend:
              service:
                name: ui-service
                port:
                  number: 80
